bpm api backed by flowable added

--- a/releng/server-all/.settings/org.eclipse.wst.common.component
+++ b/releng/server-all/.settings/org.eclipse.wst.common.component
@@ -47,6 +47,9 @@
         <dependent-module archiveName="dirigible-commons-xml2json-3.2.0-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/dirigible-commons-xml2json/dirigible-commons-xml2json">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="dirigible-api-facade-bpm-3.2.0-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/dirigible-api-facade-bpm/dirigible-api-facade-bpm">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <dependent-module archiveName="dirigible-api-javascript-all-3.2.0-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/dirigible-api-javascript-all/dirigible-api-javascript-all">
             <dependency-type>uses</dependency-type>
         </dependent-module>
