--- a/resources/resources-flowable-libs/src/main/resources/ide-bpm/editor-app/css/style.css
+++ b/resources/resources-flowable-libs/src/main/resources/ide-bpm/editor-app/css/style.css
@@ -75,8 +75,8 @@
 }
 
 .editor-toolbar .btn.btn-inverse.disabled, .editor-toolbar .btn.btn-inverse[disabled], .editor-toolbar .btn.btn-inverse[disabled]:active, .editor-toolbar .btn.btn-inverse[disabled]:hover {
-    background-color: #668b94;
-    border-color: #668b94;
+    background-color: #909090;
+    border-color: #909090;
 }
 
 .editor-toolbar .btn.btn-inverse.separator {
@@ -115,10 +115,10 @@
 .stencil-group > li {
     list-style: none;
     list-style-position: outside;
-    margin: 0px 0px 5px 15px;
+    /* margin: 0px 0px 5px 15px; */
     background-color: #ffffff;
     font-family: Arial, Regular;
-    font-size: 14px;
+    /* font-size: 14px; */
     color: #323437;
 }
 
@@ -232,7 +232,7 @@ div.canvas-wrapper {
 
 div.propertySection {
     height: 250px;
-    background-color: #e8edf1;
+    background-color: #f1f1f1;
     margin-bottom: 0px;
 }
 
@@ -589,7 +589,7 @@ li.x-menu-list-item.x-menu-item-active a {
     background: rgb(54, 167, 196);
     /* RGBa with 0.6 opacity */
     background: rgba(54, 167, 196, 0.6);
-    /*background-color: #668b94;*/
+    /*background-color: #909090;*/
     color: #ffffff;
     font-size: 14px;
 }
@@ -684,7 +684,7 @@ li.x-menu-list-item.x-menu-item-active a {
     background: rgb(54, 167, 196);
     /* RGBa with 0.6 opacity */
     background: rgba(54, 167, 196, 0.6);
-    /*background-color: #668b94;*/
+    /*background-color: #909090;*/
     color: #ffffff;
     font-size: 14px;
 
@@ -1101,7 +1101,7 @@ hot-table .column-header.label {
 #paletteSectionFooter {
     height: 50px;
     text-align: center;
-    background-color: #e8edf1;
+    background-color: #f1f1f1;
     border-top: 1px solid #a4acb9;
     border-right: 1px solid #a4acb9;
     cursor: pointer;
@@ -1115,7 +1115,7 @@ hot-table .column-header.label {
 #paletteSectionOpen {
     width: 30px;
     height: 50px;
-    background-color: #e8edf1;
+    background-color: #f1f1f1;
     text-align: center;
     bottom: 1px;
     position: fixed;
@@ -1162,7 +1162,7 @@ hot-table .column-header.label {
 }
 
 .process-treeview-header {
-    background: #36a7c4;
+    background: #505050;
     color: white;
     border: 1px solid #bbbbbb;
     padding: 2px;
