--- a/resources/resources-themes/src/main/resources/resources/themes/default/orion.css
+++ b/resources/resources-themes/src/main/resources/resources/themes/default/orion.css
@@ -435,7 +435,7 @@
 	color: #314dce;
 }
 .support {
-	color: #21439c;
+	color: #b8caf7;
 }
 .variable {
 	color: #0000c0;
@@ -500,7 +500,7 @@
 }
 .cm-meta { color: #00008F; }
 .cm-keyword { font-weight: bold; color: #7F0055; }
-.cm-atom { color: #21439c; }
+.cm-atom { color: #b8caf7; }
 .cm-number { color: black; }
 .cm-def { color: green; }
 .cm-variable { color: black; }
@@ -728,11 +728,11 @@
 	border: 1px solid black;
 }
 .annotationOverview.matchingSearch {
-	background-color: #C3E1FF;
+	background-color: #717273;
 	border: 1px solid #afcae5;
 }
 .annotationOverview.currentSearch {
-	background-color: #53D1FF;
+	background-color: #035e80;
 	border: 1px solid #42a7cc;
 }
 .annotationOverview.readOccurrence {
@@ -795,13 +795,13 @@
 	background-color: #CACACA;
 }
 .annotationRange.writeOccurrence {
-	background-color: #996600;
+	background-color: #5a5038;
 }
 .annotationRange.matchingSearch {
-	background-color: #C3E1FF;
+	background-color: #717273;
 }
 .annotationRange.currentSearch {
-	background-color: #53D1FF;
+	background-color: #035e80;
 }
 .annotationRange.linkedGroup {
 	outline: 1px dashed #707070;
@@ -810,7 +810,7 @@
 	background-color: #3399cc;
 }
 .annotationRange.selectedLinkedGroup {
-	background-color: #53D1FF;
+	background-color: #035e80;
 }
 .annotationLine {
 }
