--- a/ide/ui/ide-debugger/src/main/resources/ide-debugger/views/variables/index.html
+++ b/ide/ui/ide-debugger/src/main/resources/ide-debugger/views/variables/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml" ng-app="variables">
 <head>
 	<meta charset="utf-8" />
 	
-	<title>Eclipse Dirigible - Debugger</title>
+	<title>Eclipse Dirigible - Variables</title>
 	
-	<script src="../../ide/ui/message-hub.js"></script>
+	<script src="/services/v3/web/ide/ui/message-hub.js"></script>
 	
 	<link href="/services/v3/web/resources/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
@@ -24,28 +24,38 @@
 	
 	<!-- Twitter Bootstrap with Theme Support -->
 	<link rel="stylesheet" href="/services/v3/core/theme/bootstrap.min.css">
-	<script src="/services/v3/web/resources/bootstrap/3.3.7/bootstrap.min.js"></script>
 	
 	<!-- Custom IDE Styles -->
 	<link type="text/css" rel="stylesheet" href="/services/v3/core/theme/ide.css" />
 	
-	<script src="../../ide/ui/ui-bootstrap-tpls-0.14.3.min.js"></script>
-	
-	<script src="debugger.js"></script>
-	
-
+	<script src="/services/v3/web/ide/ui/ui-bootstrap-tpls-0.14.3.min.js"></script>
 </head>
 
-<body border="1px" ng-app="debugger" ng-controller="DebuggerController as debugger">
+<body border="1px" ng-controller="VariablesController">
 
 	<div>
 		<div class="btn-group pull-right" role="group" aria-label="toolbar">
-			<button type="button" class="btn btn-default" title="Refresh" ng-click="debugger.refresh()"><i class="fa fa-refresh"></i></button>
+			<button type="button" class="btn btn-default" title="Refresh" ng-click="refresh()"><i class="fa fa-refresh"></i></button>
 		</div>
 	</div>
 	
 	<div class="debugger"></div>
+	<table class="table table-striped" ng-cloak>
+		<thead>
+			<tr>
+				<th>Variable</th>
+				<th>Value</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr ng-repeat="next in variables">
+				<td>{{next.variable}}</td>
+				<td>{{next.value}}</td>
+			</tr>
+		</tbody>
+	</table>
 
-	
+	<script src="/services/v3/web/resources/bootstrap/3.3.7/bootstrap.min.js"></script>	
+	<script src="controller.js"></script>
 </body>
 </html>
